# template-bot

./: .dockerignore  .env-example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.sample.toml  notebook.ipynb  pyproject.toml
app/: config.py  configuration.json  cronjob.py  database.py  main.py  settings.py
app/lib/: utils.py
app/tasks/: refresh_ticker.py
