[project]
name = "app"
version = "0.1.1"
description = "Template bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp==3.13.2",
    "apscheduler==3.11.1",
    "fastapi[standard]==0.124.4",
    "pydantic-settings==2.12.0",
    "sqlmodel==0.0.27",
    "yfinance==0.2.66",
]

[dependency-groups]
dev = [
    "ipykernel==7.1.0",
    "ipywidgets==8.1.8",
    "nbformat==5.10.4",
]

[tool.ruff]
line-length = 130
unfixable = ["F401"] # Disable fix for unused imports (`F401`)
